[gd_scene load_steps=23 format=3 uid="uid://638cvws80rac"]

[ext_resource type="Script" uid="uid://yxrex5klrjdf" path="res://scenes/shops/shop_menu.gd" id="1_crqmh"]
[ext_resource type="Texture2D" uid="uid://c4g4rpa3nsxc6" path="res://assets/UI/icons/GROUNDGEM.png" id="1_p1d6s"]
[ext_resource type="Script" uid="uid://srnaalrlc73j" path="res://scripts/inventory/inventory_item.gd" id="2_u7kvx"]
[ext_resource type="Resource" uid="uid://dn8gujxm2mlfp" path="res://scripts/inventory/items/berries/cheri_berry.tres" id="3_pk0o2"]
[ext_resource type="Resource" uid="uid://cc7ypp7b0xktf" path="res://scripts/inventory/items/berries/durin_berry.tres" id="4_qdhdw"]
[ext_resource type="Resource" uid="uid://dx2ktnf5sloc0" path="res://scripts/inventory/items/berries/pamtre_berry.tres" id="5_lev3f"]
[ext_resource type="Resource" uid="uid://dxhcqrt76hxfo" path="res://scripts/inventory/items/berries/custa_berry.tres" id="6_85ogh"]
[ext_resource type="Resource" uid="uid://cw2n2r3bdxf7" path="res://scripts/inventory/items/berries/rawst_berry.tres" id="7_0ck7o"]
[ext_resource type="PackedScene" uid="uid://cblx6utrafqd5" path="res://scenes/shops/shop_item_button.tscn" id="7_pk0o2"]
[ext_resource type="AudioStream" uid="uid://bj8njq71anmsk" path="res://assets/audio/sfx/Mart buy item.ogg" id="8_exaeg"]
[ext_resource type="Resource" uid="uid://8vcju64q8d68" path="res://scripts/inventory/items/berries/yache_berry.tres" id="8_pnbjp"]
[ext_resource type="Resource" uid="uid://cr1k3dv31f8v2" path="res://scripts/inventory/items/seeds/cheri_seed.tres" id="9_pnbjp"]
[ext_resource type="AudioStream" uid="uid://bargueorxoet6" path="res://assets/audio/sfx/Slots stop.ogg" id="9_uf467"]
[ext_resource type="Resource" uid="uid://dq0fnh3ur7dep" path="res://scripts/inventory/items/seeds/custa_seed.tres" id="10_buga8"]
[ext_resource type="Resource" uid="uid://c3elen3k8vwg1" path="res://scripts/inventory/items/pokeballs/pokeball.tres" id="11_buga8"]
[ext_resource type="Resource" uid="uid://bdfl6ldmyfhob" path="res://scripts/inventory/items/seeds/durin_seed.tres" id="12_xl2xy"]
[ext_resource type="Resource" uid="uid://dtibpn6fk71gf" path="res://scripts/inventory/items/seeds/pamtre_seed.tres" id="13_lijwy"]
[ext_resource type="Resource" uid="uid://cddos32b8vvwg" path="res://scripts/inventory/items/seeds/rawst_seed.tres" id="14_rtuik"]
[ext_resource type="Resource" uid="uid://ou5ubxkg83cl" path="res://scripts/inventory/items/seeds/yache_seed.tres" id="15_8ifgb"]

[sub_resource type="Animation" id="Animation_crqmh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1055, 73)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xua0n"]
resource_name = "not_enough"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(1055, 73), Vector2(950, 73), Vector2(1049, 73), Vector2(954, 73), Vector2(1046, 73)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.996078, 0.00392157, 0.027451, 1), Color(0.996078, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crqmh"]
_data = {
&"RESET": SubResource("Animation_crqmh"),
&"not_enough": SubResource("Animation_xua0n")
}

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crqmh")
possible_items = Array[ExtResource("2_u7kvx")]([ExtResource("3_pk0o2"), ExtResource("4_qdhdw"), ExtResource("5_lev3f"), ExtResource("6_85ogh"), ExtResource("7_0ck7o"), ExtResource("8_pnbjp"), ExtResource("9_pnbjp"), ExtResource("10_buga8"), ExtResource("11_buga8"), ExtResource("12_xl2xy"), ExtResource("13_lijwy"), ExtResource("14_rtuik"), ExtResource("15_8ifgb")])

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.533333, 0.533333, 0.533333, 0.552941)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -505.0
offset_top = -214.0
offset_right = -101.0
offset_bottom = -174.0
grow_horizontal = 0
grow_vertical = 0

[node name="QuitLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Press F again at counter to quit"

[node name="Balance" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1055.0
offset_top = 73.0
offset_right = 1183.0
offset_bottom = 130.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Balance"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Balance/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Balance/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_p1d6s")
expand_mode = 2

[node name="Label" type="Label" parent="Balance/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "123"
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Balance"]
root_node = NodePath("../MarginContainer/HBoxContainer")
libraries = {
&"": SubResource("AnimationLibrary_crqmh")
}

[node name="ShopItems" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.016
offset_left = 109.0
offset_top = 179.0
offset_right = 1160.52
offset_bottom = 721.0
horizontal_scroll_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="ShopItems"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ShopItems/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ShopItems/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" parent="ShopItems/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_pk0o2")]
layout_mode = 2

[node name="Button2" parent="ShopItems/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_pk0o2")]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 55.0
offset_right = 196.0
offset_bottom = 88.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Seller"

[node name="Time" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Time"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "Shop Refresh in: "

[node name="TimeLeft" type="Label" parent="Time/HBoxContainer"]
layout_mode = 2
text = "N/A"

[node name="sfx_purchase" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_exaeg")

[node name="sfx_not_enough" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_uf467")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
